--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,8 +8,6 @@
 
 body {
   color: #363644;
-  width: var(--page-width);
-  max-width: var(--max-page-width);
   background-color: #d8d0c1;
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
